@@ -1,4 +1,4 @@
-# Copyright 1992-2013 Free Software Foundation, Inc.
+# Copyright 1992-2005, 2007-2012 Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -128,7 +128,6 @@ proc gdb_version { } {
 
 #
 # gdb_unload -- unload a file if one is loaded
-# Return 0 on success, -1 on error.
 #
 
 proc gdb_unload {} {
@@ -149,11 +148,10 @@ proc gdb_unload {} {
 	}
 	-re "$gdb_prompt $" {}
 	timeout {
-	    perror "couldn't unload file in $GDB (timeout)."
+	    perror "couldn't unload file in $GDB (timed out)."
 	    return -1
 	}
     }
-    return 0
 }
 
 # Many of the tests depend on setting breakpoints at various places and
@@ -462,10 +460,7 @@ proc runto { function args } {
 
     # We need to use eval here to pass our varargs args to gdb_breakpoint
     # which is also a varargs function.
-    # But we also have to be careful because $function may have multiple
-    # elements, and we don't want Tcl to move the remaining elements after
-    # the first to $args.  That is why $function is wrapped in {}.
-    if ![eval gdb_breakpoint {$function} $args] {
+    if ![eval gdb_breakpoint $function $args] {
 	return 0;
     }
 
@@ -517,9 +512,6 @@ proc runto { function args } {
 	    }
 	    return 0
 	}
-    }
-    if { $print_pass } {
-	pass $test_name
     }
     return 1
 }
@@ -1280,8 +1272,6 @@ proc default_gdb_exit {} {
 #
 #   debug    file was loaded successfully and has debug information
 #   nodebug  file was loaded successfully and has no debug information
-#   lzma     file was loaded, .gnu_debugdata found, but no LZMA support
-#            compiled in
 #   fail     file was not loaded
 #
 # I tried returning this information as part of the return value,
@@ -1297,7 +1287,6 @@ proc gdb_file_cmd { arg } {
     global GDB
     global last_loaded_file
 
-    # Save this for the benefit of gdbserver-support.exp.
     set last_loaded_file $arg
 
     # Set whether debug info was found.
@@ -1329,18 +1318,13 @@ proc gdb_file_cmd { arg } {
 
     send_gdb "file $arg\n"
     gdb_expect 120 {
-	-re "Reading symbols from.*LZMA support was disabled.*done.*$gdb_prompt $" {
-	    verbose "\t\tLoaded $arg into $GDB; .gnu_debugdata found but no LZMA available"
-	    set gdb_file_cmd_debug_info "lzma"
-	    return 0
-	}
 	-re "Reading symbols from.*no debugging symbols found.*done.*$gdb_prompt $" {
-	    verbose "\t\tLoaded $arg into $GDB with no debugging symbols"
+	    verbose "\t\tLoaded $arg into the $GDB with no debugging symbols"
 	    set gdb_file_cmd_debug_info "nodebug"
 	    return 0
 	}
         -re "Reading symbols from.*done.*$gdb_prompt $" {
-            verbose "\t\tLoaded $arg into $GDB"
+            verbose "\t\tLoaded $arg into the $GDB"
 	    set gdb_file_cmd_debug_info "debug"
 	    return 0
         }
@@ -1353,37 +1337,28 @@ proc gdb_file_cmd { arg } {
 		    return 0
                 }
                 timeout {
-                    perror "Couldn't load $arg, other program already loaded (timeout)."
+                    perror "(timeout) Couldn't load $arg, other program already loaded."
 		    return -1
                 }
-		eof {
-		    perror "Couldn't load $arg, other program already loaded (eof)."
-		    return -1
-		}
             }
 	}
         -re "No such file or directory.*$gdb_prompt $" {
             perror "($arg) No such file or directory"
 	    return -1
         }
-	-re "A problem internal to GDB has been detected" {
-	    fail "($arg) (GDB internal error)"
-	    gdb_internal_error_resync
-	    return -1
-	}
         -re "$gdb_prompt $" {
-            perror "Couldn't load $arg into $GDB."
+            perror "couldn't load $arg into $GDB."
 	    return -1
             }
         timeout {
-            perror "Couldn't load $arg into $GDB (timeout)."
+            perror "couldn't load $arg into $GDB (timed out)."
 	    return -1
         }
         eof {
             # This is an attempt to detect a core dump, but seems not to
             # work.  Perhaps we need to match .* followed by eof, in which
             # gdb_expect does not seem to have a way to do that.
-            perror "Couldn't load $arg into $GDB (eof)."
+            perror "couldn't load $arg into $GDB (end of file)."
 	    return -1
         }
     }
@@ -1550,35 +1525,12 @@ proc skip_java_tests {} {
 
 proc skip_python_tests {} {
     global gdb_prompt
-    global gdb_py_is_py3k
-    global gdb_py_is_py24
-
-    gdb_test_multiple "python print ('test')" "verify python support" {
+    gdb_test_multiple "python print 'test'" "verify python support" {
 	-re "not supported.*$gdb_prompt $"	{
 	    unsupported "Python support is disabled."
 	    return 1
 	}
 	-re "$gdb_prompt $"	{}
-    }
-
-    set gdb_py_is_py24 0
-    gdb_test_multiple "python print (sys.version_info\[0\])" "check if python 3" {
-	-re "3.*$gdb_prompt $"	{
-            set gdb_py_is_py3k 1
-        }
-	-re ".*$gdb_prompt $"	{
-            set gdb_py_is_py3k 0
-        }
-    }
-    if { $gdb_py_is_py3k == 0 } {
-        gdb_test_multiple "python print (sys.version_info\[1\])" "check if python 2.4" {
-	    -re "\[45\].*$gdb_prompt $" {
-                set gdb_py_is_py24 1
-            }
-	    -re ".*$gdb_prompt $" {
-                set gdb_py_is_py24 0
-            }
-        }
     }
 
     return 0
@@ -2208,36 +2160,6 @@ proc skip_hw_watchpoint_access_tests {} {
     }
 
     return 0
-}
-
-# Return 1 if we should skip tests that require the runtime unwinder
-# hook.  This must be invoked while gdb is running, after shared
-# libraries have been loaded.  This is needed because otherwise a
-# shared libgcc won't be visible.
-
-proc skip_unwinder_tests {} {
-    global gdb_prompt
-
-    set ok 0
-    gdb_test_multiple "print _Unwind_DebugHook" "check for unwinder hook" {
-	-re "= .*no debug info.*_Unwind_DebugHook.*\r\n$gdb_prompt $" {
-	}
-	-re "= .*_Unwind_DebugHook.*\r\n$gdb_prompt $" {
-	    set ok 1
-	}
-	-re "No symbol .* in current context.\r\n$gdb_prompt $" {
-	}
-    }
-    if {!$ok} {
-	gdb_test_multiple "info probe" "check for stap probe in unwinder" {
-	    -re ".*libgcc.*unwind.*\r\n$gdb_prompt $" {
-		set ok 1
-	    }
-	    -re "\r\n$gdb_prompt $" {
-	    }
-	}
-    }
-    return $ok
 }
 
 set compiler_info		"unknown"
@@ -3058,36 +2980,6 @@ proc gdb_load_cmd { args } {
     return -1
 }
 
-# Invoke "gcore".  CORE is the name of the core file to write.  TEST
-# is the name of the test case.  This will return 1 if the core file
-# was created, 0 otherwise.  If this fails to make a core file because
-# this configuration of gdb does not support making core files, it
-# will call "unsupported", not "fail".  However, if this fails to make
-# a core file for some other reason, then it will call "fail".
-
-proc gdb_gcore_cmd {core test} {
-    global gdb_prompt
-
-    set result 0
-    gdb_test_multiple "gcore $core" $test {
-	-re "Saved corefile .*\[\r\n\]+$gdb_prompt $" {
-	    pass $test
-	    set result 1
-	}
-
-	-re "Undefined command.*$gdb_prompt $" {
-	    unsupported $test
-	    verbose -log "'gcore' command undefined in gdb_gcore_cmd"
-	}
-
-	-re "Can't create a corefile\[\r\n\]+$gdb_prompt $" {
-	    unsupported $test
-	}
-    }
-
-    return $result
-}
-
 # Return the filename to download to the target and load on the target
 # for this shared library.  Normally just LIBNAME, unless shared libraries
 # for this target have separate link and load images.
@@ -3463,7 +3355,7 @@ proc get_debug_format { } {
 	    return 1;
 	}
 	timeout {
-	    warning "couldn't check debug format (timeout)."
+	    warning "couldn't check debug format (timed out)."
 	    return 1;
 	}
     }
@@ -3494,6 +3386,14 @@ proc setup_xfail_format { format } {
 	setup_xfail "*-*-*"
     }
     return $ret;
+}
+
+# Like setup_kfail, but only call setup_kfail conditionally if
+# istarget[TARGET] returns true.
+proc setup_kfail_for_target { PR target } {
+    if { [istarget $target] } {
+	setup_kfail $PR $target
+    }
 }
 
 # gdb_get_line_number TEXT [FILE]
